# RFE-cross-validation

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml  requirements.txt  rfe_cv.py
tests/: test_rfe_cv.py
