[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rfe-cv"
version = "0.1.0"
description = "Recursive Feature Elimination run across cross-validation folds, with feature-stability and score plots."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Áttila", email = "attila.leaes@gmail.com" }]
keywords = ["rfe", "feature-selection", "cross-validation", "scikit-learn", "machine-learning"]
dependencies = [
    "numpy>=1.20",
    "pandas>=1.2",
    "scipy>=1.6",
    "matplotlib>=3.3",
    "scikit-learn>=1.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/attilalr/RFE-cross-validation"
Repository = "https://github.com/attilalr/RFE-cross-validation"
Issues = "https://github.com/attilalr/RFE-cross-validation/issues"

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools]
py-modules = ["rfe_cv"]
